[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Keksgames-Server-Modpack-Creator"
version = "0.1.0"
description = "A friendly TUI for turning a Minecraft launcher mods folder into a server-side modpack."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mc-server-pack = "keksgames_server_modpack_creator.__main__:main"

[tool.setuptools]
packages = ["keksgames_server_modpack_creator"]

[tool.setuptools.package-dir]
keksgames_server_modpack_creator = "Keksgames-Server-Modpack-Creator"
